<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IncProfs</string>
    <string name="action_settings">Settings</string>

    <string name="textView_output_no">Nothing to show.</string>
    <string name="textView_learning_label">Learning</string>
    <string name="button_testing_label">Testing</string>

    <string name="toggleButton_on_learning">On</string>
    <string name="toggleButton_off_learning">Off</string>

    <string name="go_button_label">Start</string>
    
    <string name="arff_file_name">trainingData.arff</string>
    <string name="test_file_name">testData.arff</string>
    <string name="classifier_file_name">adaptiveVFDTClassifier.dat</string>

</resources>
