<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".StartActivity" >


    <LinearLayout
        android:id="@+id/layout_learning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"

        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_learning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginRight="15dp"

            android:textSize="20sp"
            android:text="@string/textView_learning_label" />

        <ToggleButton
            android:id="@+id/toggleButton_learning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/textView_learning"

            android:textOn="@string/toggleButton_on_learning"
            android:textOff="@string/toggleButton_off_learning" />

    </LinearLayout>

    <Button
        android:id="@+id/button_testing"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_learning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"

        android:onClick="startTesting"
        android:background="@drawable/button"
        android:text="@string/button_testing_label" />



    <Button
        android:id="@+id/go_button"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_testing"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="startQuiz"
        android:background="@drawable/button"
        android:text="@string/go_button_label" />

</RelativeLayout>
